[project]
name = "conquerdsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "anjali-singh-cyber", email = "singh.anjali.8625@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "platformdirs>=4.10.0",
    "rich>=15.0.0",
    "tomli-w>=1.2.0",
    "typer>=0.26.8",
]

[project.scripts]
conquerdsa = "conquerdsa.main:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
